-bug#0001587: 64bit HEX Strings don't convert to Decimal on 32bit Systems
-bug#0001604: HEX Counter values enclosed in quotes not recognized as HEX
-bug#0001609: Script server timeout too aggressive with 10 second poller interval
-bug#0001628: Message does not match available buttons in Change SNMP Options
-bug#0001695: suppress deprecated warnings in Cacti code 
-bug: When creating new graphs without a data source, print error to user instead of throwing php error
-bug: Browser query string does not contain arguments
-bug: inject_form_variables does not operate if more than 1 variable needs replacing
-bug: Script imposed memory limits cause issues with some scripts
-bug: Turn off process leveling if there are not enough poller items to substantiate it
-bug: Add device should allow no-snmp type devices
-bug: Firefox Autocomplete causes issues with password validation
-bug: Access Denied messages don't allow re-direction to login page
-bug: When clearing filter on new-graphs don't clear host or template
-bug: When clearing filter, reset page to 1 for all queries
-bug: Graph List selectors do not persist between pages
-bug: allow empty [upper|lower]_limit even without autoscaling
-feature: Add logging to SQL Save error handling
-feature: Add utility to convert database to InnoDB
-feature: Return nav as the title for the page
-feature: Detect and correct for RRDtool segfaults
-feature: Add rra_id for hosts and graphs to be used during tree export
-feature: Make the Graphs pages render like the rest of Cacti
-feature: Convert base Cacti UI to use buttons and not images
-feature: Make poller sane so that it can be used by other cacti processes

0.8.7e

-bug#0001044: Creating a DS, Output field can't be selected for DT with a DIM when "Use Per-Data Source Value" is on
-bug#0001341: SNMP query: add oid_suffix for weird SNMP queries 
-bug#0001345: Overwriting $snmp_index in query_snmp_host() breaks SNMP Data query if using get method