@@ -706,7 +706,6 @@ function update_host_status($status, $host_id, &$hosts, &$ping, $ping_availabili
 			($ping_availability == AVAIL_SNMP_OR_PING) ||
 			($ping_availability == AVAIL_SNMP)) &&
 			(!is_numeric($ping->snmp_status))) {
-			cacti_log("WARNING: Poller[0] Host[$host_id] SNMP Time was not numeric", TRUE, "POLLER");
 			$ping->snmp_status = 0.000;
 		}
 
@@ -714,7 +713,6 @@ function update_host_status($status, $host_id, &$hosts, &$ping, $ping_availabili
 			($ping_availability == AVAIL_SNMP_OR_PING) ||
 			($ping_availability == AVAIL_PING)) &&
 			(!is_numeric($ping->ping_status))) {
-			cacti_log("WARNING: Poller[0] Host[$host_id] Ping Time was not numeric", TRUE, "POLLER");
 			$ping->ping_status = 0.000;
 		}
 		/* determine the ping statistic to set and do so */
