@@ -56,6 +56,7 @@ Cacti CHANGELOG
 -bug#0001604: HEX Counter values enclosed in quotes not recognized as HEX
 -bug#0001609: Script server timeout too aggressive with 10 second poller interval
 -bug#0001623: SQL JOIN on user_log without INDEX (performance issue)
+-bug#0001746: SNMP Hex-String matching 
 -bug: remove graph permissions if graph is removed
 -bug: remove host permissions if host is removed
 -bug: add_tree.php did not allow nodes with propagating sort options
@@ -70,6 +71,7 @@ Cacti CHANGELOG
 -bug: Logarithmic Scaling and units-si dependencies fixed (thanks to ke6oms)
 -bug: Turn off process leveling if there are not enough poller items to substantiate it
 -bug: allow empty [upper|lower]_limit even without autoscaling
+-bug: Availability method Ping or SNMP generates meaningless warnings
 -documentation: Remove sgml documentation.  See http://docs.cacti.net for Documentation
 -documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
 -documentation: Documentation of specific rrdtool feature
@@ -161,6 +163,7 @@ Cacti CHANGELOG
 -feature: Return nav as the title for the page
 -feature: Modularize table display
 -feature: Allow Graphs and Data Source totals to be sorted when viewing devices
+-feature: Add snmp timeout warnings for lib/snmp.php
 
 0.8.7e
 
